--- a/style.css
+++ b/style.css
@@ -3,25 +3,43 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f8f9fa; /* Colore sfondo grigio chiaro */
 }
 
 /* Stili per il contenitore della pagina */
-.content {
-    padding-top: 70px; /* Altezza del site-panel */
+#content {
     position: relative; /* Imposta la posizione relativa */
-    min-height: calc(100vh - 70px); /* Altezza minima pari all'altezza della viewport meno l'altezza del site-panel */
 }
+
+/* Stili per le sezioni */
+section {
+    padding: 100px 0;
+    background-color: #52e8fc;
+}
+
+/* Testo evidenziato */
+.section-title {
+    color: #008080; /* Colore testo verde acqua */
+    font-size: 28px;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+
+.container-fluid {
+    width: 100%;
+    background-color:#52e8fc;
+}
+
 
 /* Stili per il footer */
 footer {
-    background-color: #008080; /* Colore acqua */
+    background-color: #008080; 
     color: #fff;
     text-align: center;
     padding: 10px 0;
     width: 100%;
-    position: fixed; /* Imposta la posizione fissa */
     bottom: 0;
+    border-top: 3px solid white;
+
 }
 
 
@@ -49,10 +67,11 @@ header {
     padding: 10px;
     background-color: #008080; /* Colore acqua */
     color: #fff;
+    border-bottom: 3px solid white;
 }
 
 .logo {
-    font-size: 24px;
+    font-size: 36px;
     font-weight: bold; /* Testo in grassetto per il logo */
 }
 
@@ -77,40 +96,7 @@ header {
     outline: none;
 }
 
-/* Stili per le sezioni */
-section {
-    padding: 50px 0;
-    text-align: center;
-    background-color: #f2f2f2; /* Colore sfondo grigio chiaro */
-}
 
-/* Testo evidenziato */
-.section-title {
-    color: #008080; /* Colore testo verde acqua */
-    font-size: 28px;
-    font-weight: bold;
-    margin-bottom: 30px;
-}
-
-.section-content {
-    color: #555;
-}
-
-/* Stili per il footer */
-footer {
-    background-color: #008080; /* Colore acqua */
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-    width: 100%;
-    position: fixed; /* Imposta la posizione fissa */
-    bottom: 0;
-}
-
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-}
 /* Pulsante */
 .btn {
     display: inline-block;
@@ -177,26 +163,30 @@ footer {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    background-image: url(assets/sfondo.png);
+    background-size: 200px 200px;
     margin-left: 0;
     margin-right: 0;
-    margin-top: 0px;
+    margin-top: 0;
     padding-top: 40px;
+    border: 3px solid white;
+    border-radius: 15px;
   }
+
   
   .card-container .card {
     position: relative;
     width: 296px;
     height: 400px;
     margin: 30px;
-    box-shadow: 20px 20px 50px rgba(255, 255, 255, 0.5);
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.75);
     border-radius: 15px;
     background: #008080;
     overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-top: 1px solid rgba(255, 255, 255, 0.5);
-    border-left: 1px solid rgba(255, 255, 255, 0.5);
+    border: 3px solid rgba(255, 255, 255, 1);
     backdrop-filter: blur(5px);
   }
   
